--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -38,6 +38,11 @@ h2{
   text-align: left;
   float: right;
   margin-left: 2em;
+  .slika p:last-child {
+      margin-bottom: 0.8 em;
+      background-color: #cc0000;
+      border-radius: 50%;
+  }
 }
 .slika img {
     width:100%;
